--- a/diabetes_graphs.ipynb
+++ b/diabetes_graphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# diabetes_clean.to_csv(r'C:\\Users\\kylie\\OneDrive\\Desktop\\uofm-stp-data-pt-09-2020-u-c\\Test\\diabetes_clean.csv', index = False)"
+    "diabetes_clean.to_csv(r'Resources/diabetes_clean.csv', index = False)"
    ]
   },
   {
@@ -4135,9 +4135,9 @@
     }
    ],
    "source": [
-    "diabetes_clean_array = diabetes_clean.to_dict('records')\n",
+    "# diabetes_clean_array = diabetes_clean.to_dict('records')\n",
     "\n",
-    "diabetes_clean_array"
+    "# diabetes_clean_array"
    ]
   },
   {
@@ -4170,7 +4170,7 @@
     }
    ],
    "source": [
-    "diabetes_clean.to_json()"
+    "# diabetes_clean.to_json()"
    ]
   }
  ],
