--- a/diabetes.ipynb
+++ b/diabetes.ipynb
@@ -876,6 +876,15 @@
     "predicted_outcome = knn.predict(new_diabetes_data)\n",
     "print(predicted_outcome)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "The End"
+   ]
   }
  ],
  "metadata": {
